added header to index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Group 101-06 Final Project</title>
   </head>
   <body>
-    
+    <header><h1>INST377 Final Project, Group 101-06: Zoey Anastasiadis and David Franceschi</h1></header>
   </body>
 </html>
