--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Group 101-06 Final Project</title>
   </head>
   <body>
-    <header><h1>INST377 Final Project, Group 101-06: Zoey Anastasiadis and David Franceschi</h1></header>
+    <header><h1>Group 101-06 INST377 Final Project</h1></header>
+    <p>Zoey Anastasiadis and David Franceschi</p>
   </body>
 </html>
