testing format: added body to index and css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Group 101-06 Final Project</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header><h1>Group 101-06 INST377 Final Project</h1></header>
-    <p>Zoey Anastasiadis and David Franceschi</p>
+    <div class="wrapper"> 
+      <header class="header"><h1>Spotify Genre Calculator</h1></header>
+      <div class="container">
+        <div class="left_section box">
+          <h2>Most Listened to Genres</h2>
+          <ol class="box">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ol>
+        </div>
+        <div class="right_section box">
+          <h2>New Genres to Check Out</h2>
+          <div class="grid img">
+            
+          </div>
+          <div class="box">
+            Above are the links to 4 new songs you can check out from the genres you listen to least often.
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="footer"><a href="https://github.com/zcanast/zcanast.github.io" target="_blank" rel="noopener noreferrer">Group 101-06: Zoey Anastasiadis and David Franceschi</a></footer>
+    
   </body>
 </html>
