index and style updates

--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
           </ol>
         </div>
         <div class="right_section box">
-          <h2>New Genres to Check Out</h2>
-          <div class="grid img">
-            
-          </div>
+          <h2>New Songs to Check Out</h2>
+          <ol class="box">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ol>
           <div class="box">
-            Above are the links to 4 new songs you can check out from the genres you listen to least often.
+            Above are the links to 5 new songs you can check out from the genres you listen to least often.
           </div>
         </div>
       </div>
