--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         </div>
         <div class="right_section box">
           <h2>New Songs to Check Out</h2>
+          <div class="box">
+            Based on the genres you listen to least, here are 5 new songs you can check out!
+          </div>
           <ol class="box">
             <li></li>
             <li></li>
@@ -29,9 +32,6 @@
             <li></li>
             <li></li>
           </ol>
-          <div class="box">
-            Above are the links to 5 new songs you can check out from the genres you listen to least often.
-          </div>
         </div>
       </div>
     </div>
