--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="right_section box">
           <h2>New Songs to Check Out</h2>
-          <div class="box">
+          <div>
             Based on the genres you listen to least, here are 5 new songs you can check out!
           </div>
           <ol class="box">
