edited index file

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="right_section box">
           <h2>New Songs to Check Out</h2>
           <div>
-            Based on the genres you listen to least, here are 5 new songs you can check out!
+            Based on the genres you listen to least often, here are 5 new songs you can check out!
           </div>
           <ol class="box">
             <li></li>
