--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
       </div>
     </div>
     <footer class="footer"><a href="https://github.com/zcanast/zcanast.github.io" target="_blank" rel="noopener noreferrer">Group 101-06: Zoey Anastasiadis and David Franceschi</a></footer>
+    <script src="script.js"></script>
   </body>
 </html>
