--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <!-- <div id="map"></div> -->
           <div class="box" id="restaurant_list">
               <!-- description box -->
-              A list of restaurants from an API
+              A list of crimes from the PG County Crime database
           </div>
         </div>
       </div>
