switching from graph to map of crimes

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Group 101-06 Final Project</title>
-    <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
      integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
-     crossorigin=""/> -->
+     crossorigin=""/>
      <link rel="stylesheet" href="style.css" />
-     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-     <!-- <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
+     <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
+     <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
      integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
-     crossorigin=""></script> -->
+     crossorigin=""></script>
   </head>
   <body>
     <div class="wrapper"> 
@@ -31,13 +31,13 @@
         </div>
         <div class="right_section box">
           <h2>Local Crime Map</h2>
-
+          <div id="map"></div>
+          <!-- 
           <div class="chart_container"> 
             <canvas id="myChart"></canvas>
           </div>
-
-          <!-- <div id="map"></div> -->
-          <div class="box" id="restaurant_list">
+          -->
+          <div class="box" id="crime_list">
               <!-- description box -->
               A list of crimes from the PG County Crime database
           </div>
