--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
      crossorigin=""/>
      <link rel="stylesheet" href="style.css" />
-     <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
+     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
      <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
      integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
      crossorigin=""></script>
@@ -29,14 +29,12 @@
               <button type="submit" id="get-resto">Change Crimes</button>
           </form>
         </div>
+        <div class="chart_container box"> 
+          <canvas id="myChart"></canvas>
+        </div>
         <div class="right_section box">
           <h2>Local Crime Map</h2>
           <div id="map"></div>
-          <!-- 
-          <div class="chart_container"> 
-            <canvas id="myChart"></canvas>
-          </div>
-          -->
           <div class="box" id="crime_list">
               <!-- description box -->
               A list of crimes from the PG County Crime database
