--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
               <button type="submit" id="get-resto">Change Crimes</button>
           </form>
         </div>
-        <div class="chart_container box"> 
-          <canvas id="myChart"></canvas>
-        </div>
         <div class="right_section box">
           <h2>Local Crime Map</h2>
+          <div class="chart_container"> 
+            <canvas id="myChart"></canvas>
+          </div>
           <div id="map"></div>
           <div class="box" id="crime_list">
               <!-- description box -->
