--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </form>
         </div>
         <div class="right_section box">
-          <h2>Local Crime Data</h2>
+          <h2>Distribution of Local Crime</h2>
           <div class="chart_container"> 
             <canvas id="myChart"></canvas>
           </div>
