--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
           </form>
         </div>
         <div class="right_section box">
+          <h3>Crime Map</h3>
+          <div id="map"></div></div>
+        <div class="right_section box">
           <h2>Distribution of Local Crime</h2>
           <div class="chart_container"> 
             <canvas id="myChart"></canvas>
