--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <div class="wrapper"> 
       <header class="header"><h1>Crime in Prince George's County, Maryland</h1></header>
       <div class="container">
+
         <div class="left_section box">
-          <h3>Form Inputs</h3>
+          <!-- <h3>Form Inputs</h3> -->
           <form action="/api" class="box main_form">
               <div>
                   <label for="resto">Filter Crime List</label>
@@ -28,10 +29,12 @@
               <button type="submit" id="get-resto">Change Crimes</button>
           </form>
         </div>
+
         <div class="right_section box">
           <h3>Crime Map</h3>
           <div id="map"></div>
         </div>
+
         <div class="right_section box">
           <h3>Distribution of Local Crime</h3>
             <div class="box chart_container"> 
@@ -41,6 +44,7 @@
                 A list of crimes from the PG County Crime database
             </div>
         </div>
+        
       </div>
     </div>
     <footer class="footer">
