added description to form

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
               <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
               <button type="submit" id="get-resto">Change Crimes</button>
           </form>
+          <p>Click "Change Crimes" button to generate a randomized list of crimes. Begin typing in the search bar to narrow the crimes by type.</p>
         </div>
 
         <div class="right_section box">
@@ -44,7 +45,7 @@
                 A list of crimes from the PG County Crime database
             </div>
         </div>
-        
+
       </div>
     </div>
     <footer class="footer">
